--- a/src/gtk3/common/scss/gtk-widgets/_entry.scss
+++ b/src/gtk3/common/scss/gtk-widgets/_entry.scss
@@ -38,7 +38,7 @@ entry,
   }
   
   image {
-    margin: 0 $tiny_padding_em 0 $no_padding;
+    margin: 0;
     color: $fg_color;
     
     &:backdrop {
